--- a/bot/package.json
+++ b/bot/package.json
@@ -39,7 +39,8 @@
     "pdf-parse": "^1.1.1",
     "mammoth": "^1.6.0",
     "csv-parser": "^3.0.0",
-    "commander": "^11.1.0"
+    "commander": "^11.1.0",
+    "@supabase/supabase-js": "^2.39.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
