Refactor chat processing to utilize new ConversationService and enhance escalation handling
- Integrated ConversationService for managing conversations and message history.
- Simplified conversation creation and retrieval logic.
- Improved escalation checks to prevent duplicate human agent connections.
- Updated ClientRAGService to support client-specific configurations in AI responses.
- Enhanced conversation history management for better context in chat interactions.
- Added new escalation records to JSON for tracking customer requests for human assistance.

--- a/bot/data/client-configs.json
+++ b/bot/data/client-configs.json
@@ -4,7 +4,7 @@
     "description": "Default client for Supa Chatbot",
     "vectorDB": {
       "type": "mongodb",
-      "connectionString": "mongodb+srv://username:password@cluster.mongodb.net/database",
+      "connectionString": "mongodb://localhost:27017",
       "database": "supa_chatbot",
       "collection": "knowledgebases",
       "vectorIndex": "vector_index",
@@ -25,7 +25,8 @@
     "webCrawler": {
       "enabled": true,
       "urls": [
-        "https://www.africanvibes.net/help-center"
+        "https://docs.supachatbot.com",
+        "https://help.supachatbot.com"
       ],
       "refreshInterval": 24
     }
