Remove deprecated files and update package dependencies
- Deleted unused files including check-indexes.js, crawl-website.js, load-static-kb.js, chunkingStrategyController.js, langchainKnowledgeBaseController.js, and several service and route files to streamline the project.
- Updated package.json to include new dependencies for Hugging Face and LangChain, enhancing the bot's capabilities.
- Refactored chatController and clientController to remove references to removed services and adjust for new MongoDB handling.
- Simplified bot initialization by removing unnecessary route imports related to chunking strategies and LangChain processing.

--- a/bot/package.json
+++ b/bot/package.json
@@ -24,6 +24,9 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.65.0",
+    "@huggingface/inference": "^4.11.0",
+    "@langchain/cohere": "^0.3.4",
+    "@langchain/community": "^0.3.57",
     "@langchain/core": "^0.3.58",
     "@langchain/openai": "^0.1.0",
     "@langchain/textsplitters": "^0.0.0",
