--- a/bot/render.yaml
+++ b/bot/render.yaml
@@ -5,6 +5,7 @@ services:
     plan: free
     buildCommand: pnpm install
     startCommand: pnpm start
+    rootDir: bot
     envVars:
       - key: NODE_ENV
         value: production
