Update package dependencies and add optional dependencies for enhanced functionality
- Added optional dependencies for @browserbasehq/stagehand, @ibm-cloud/watsonx-ai, and ibm-cloud-sdk-core in package.json to support new features and integrations.
- Updated pnpm-lock.yaml to reflect the addition of these optional dependencies, ensuring proper package management and installation.

--- a/bot/package.json
+++ b/bot/package.json
@@ -49,5 +49,10 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
+  },
+  "optionalDependencies": {
+    "@browserbasehq/stagehand": "^1.14.0",
+    "@ibm-cloud/watsonx-ai": "^1.6.13",
+    "ibm-cloud-sdk-core": "^5.4.3"
   }
 }
