--- a/bot/package.json
+++ b/bot/package.json
@@ -43,6 +43,7 @@
     "mammoth": "^1.6.0",
     "mongoose": "^8.6.1",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
     "openai": "^4.56.0",
     "pdf-parse": "^1.1.1"
