Update dependencies and enhance agent deletion process
- Replaced `pdf-parse` with `pdf-lib` and `pdfreader` in package.json to improve PDF handling capabilities.
- Updated pnpm-lock.yaml to reflect new dependencies and their versions.
- Enhanced logging in agent deletion process for better error tracking and user feedback.
- Modified agent model to include a 'deleted' status for improved agent management.

--- a/bot/package.json
+++ b/bot/package.json
@@ -46,7 +46,8 @@
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
     "openai": "^4.56.0",
-    "pdf-parse": "^1.1.1"
+    "pdf-lib": "^1.17.1",
+    "pdfreader": "^3.0.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
