--- a/bot/package.json
+++ b/bot/package.json
@@ -31,6 +31,7 @@
     "@langchain/openai": "^0.1.0",
     "@langchain/textsplitters": "^0.0.0",
     "@supabase/supabase-js": "^2.39.0",
+    "bcryptjs": "^3.0.2",
     "cheerio": "^1.0.0-rc.12",
     "commander": "^11.1.0",
     "cors": "^2.8.5",
@@ -39,6 +40,7 @@
     "express": "^4.19.2",
     "groq-sdk": "^0.5.0",
     "jsdom": "^24.0.0",
+    "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.34",
     "mammoth": "^1.6.0",
     "mongoose": "^8.6.1",
