--- a/bot/package.json
+++ b/bot/package.json
@@ -46,10 +46,12 @@
     "mongoose": "^8.6.1",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
     "openai": "^4.56.0",
     "pdf-lib": "^1.17.1",
-    "pdfreader": "^3.0.7"
+    "pdfreader": "^3.0.7",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
