Implement subscription management and payment integration
- Introduced SubscriptionService to handle user subscription limits and validation.
- Added Subscription model to manage subscription data in the database.
- Created PaymentService for Stripe payment processing and subscription management.
- Implemented payment authentication middleware for secure payment routes.
- Updated agent routes to include limits based on user subscription.
- Added new payment routes for handling subscription status and webhooks.
- Enhanced client-side components to reflect subscription status and upgrade options.
- Removed obsolete embed.js and example.html files, transitioning to a modular embed system for the chat widget.

--- a/bot/package.json
+++ b/bot/package.json
@@ -51,6 +51,7 @@
     "openai": "^4.56.0",
     "pdf-lib": "^1.17.1",
     "pdfreader": "^3.0.7",
+    "stripe": "^19.1.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
